Support multiple JVM options in jvmOption config
Refactored WCCOAJavaMain.cxx in both Manager and ManagerV4 to split space-separated JVM options into individual parameters, allowing multiple JVM options to be specified in the config. Updated README.md to clarify and provide examples for specifying multiple JVM options.